<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/title_orders" />
    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_add"
        android:title="@string/title_create" />
    <item
        android:id="@+id/navigation_cooking"
        android:icon="@drawable/ic_cooking"
        android:title="@string/title_cooking" />
    <item
        android:id="@+id/navigation_payment"
        android:icon="@drawable/ic_payment"
        android:title="@string/title_payment" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>