<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_orders">

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.prm_v3.ui.orders.OrderFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.prm_v3.ui.create.CreateOrderFragment"
        android:title="@string/title_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_cooking"
        android:name="com.example.prm_v3.ui.cooking.cookingFragment"
        android:title="@string/title_cooking"
        tools:layout="@layout/fragment_cooking" />

    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.example.prm_v3.ui.payment.paymentFragment"
        android:title="@string/title_payment"
        tools:layout="@layout/fragment_payment"/>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.prm_v3.ui.profile.profileFragment"
        android:title="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>